Update Project Notice of Objectives and Limitations.ipynb

--- a/Project Notice of Objectives and Limitations.ipynb
+++ b/Project Notice of Objectives and Limitations.ipynb
@@ -5,7 +5,8 @@
    "id": "e7101f5f",
    "metadata": {},
    "source": [
-    "<h2 align = \"center\">NYC Traffic Open Data: Project Notice of Objectives and Limitations</h2>"
+    "<h2 align = \"center\">NYC Traffic Open Data: Project Notice of Objectives and Limitations</h2>\n",
+    "<hr>"
    ]
   },
   {
@@ -17,8 +18,45 @@
     "\n",
     "<i>Developed under the advice of <b>Doctor Carl Skelton</b>, solely by <b>Michael Xu</b> (NYU NetID: tx542; Full Legal Name: Tianxiao Xu)</i>\n",
     "\n",
-    "<i>The end product (described in this document) is published on the World Wide Web (WWW) at the URL https://traffic-demo.herokuapp.com/. Usage of this end product is contingent upon the terms and conditions listed in this \"Project Notice of Objectives and Limitations\" document.</i>\n",
-    "    \n"
+    "<i>A <b>demonstration (\"demo\") of the end product</b> described in this document (sample size = 1000 data points) is published on the World Wide Web (WWW) <b>at the URL <a href = \"https://traffic-demo.herokuapp.com/\" target=\"_blank\">https://traffic-demo.herokuapp.com/</a></b>. Usage of this end product demo is contingent upon the terms and conditions listed in this \"Project Notice of Objectives and Limitations\" document.</i>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9af4b94",
+   "metadata": {},
+   "source": [
+    "<hr>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f8a1b12",
+   "metadata": {},
+   "source": [
+    "<h3 align = \"center\">OUTLINE</h3>\n",
+    "<h3>1. Project Disclaimer and Purpose</h3>\n",
+    "<h4>1.1 Project Disclaimer (\"Disclaimer\")</h4>\n",
+    "<h4>1.2 Project Purpose & Objectives (\"Manifesto\")</h4>\n",
+    "<h4>1.3 Project Simulator Specifications (\"Instructions\")</h4>\n",
+    "<h3>2. Project Data Sources and References</h3>\n",
+    "<h4>2.1 Citation of Critical Data Sources, Programming Libraries/Packages, and Services</h4>\n",
+    "<h4>2.2 Citation of All Used Python Programming Libraries</h4>\n",
+    "<h3>3. Project Methodology, Limitations, and Directions for Future Research</h3>\n",
+    "<h4>3.1 Limited Sample Size</h4>\n",
+    "<h4>3.2 Variables Used, KNN Models, and Losses in the Degrees of Freedom</h4>\n",
+    "<h4>3.3 Lack of Data and Additional Confounding Variables (Agent-Based Microsimulation Models)</h4>\n",
+    "<h4>3.4 Ethical Considerations: Scaling of Population Estimations</h4>\n",
+    "<h4>3.5 Directions for Future Research</h4>\n",
+    "<h3>4. Contact Information</h3>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b01dde1",
+   "metadata": {},
+   "source": [
+    "<hr>"
    ]
   },
   {
@@ -184,7 +222,7 @@
    "id": "089a7c20",
    "metadata": {},
    "source": [
-    "### 3. Project Methodology and Limitations"
+    "### 3. Project Methodology, Limitations, and Directions for Future Research"
    ]
   },
   {
@@ -192,7 +230,59 @@
    "id": "037aaf58",
    "metadata": {},
    "source": [
-    "TBA."
+    "#### 3.1 Limited Sample Size\n",
+    "In the published **demonstration (\"demo\") of the end product**, a **most recent sample of 1,000 data points is requested from the server of the <i><a href = \"https://data.cityofnewyork.us/Transportation/Real-Time-Traffic-Speed-Data/qkm5-nuaq\" target = \"_blank\">Real-Time Traffic Speed Data</a></i> dataset**. This is largely due to considerations of compatibility of the computing power of different devices and operating systems—**1,000 data points would still be statistically large enough** (for theorems such as the *Law of Large Numbers* or *Central Limit Theorem* to hold—which validates the unbiasedness and consistency of the inferences of the models), while **not so large that the server queries place significant burdens on the devices of end-users** (or the queries may simply take too much time and negatively impact user experiences). \n",
+    "\n",
+    "Nonetheless, the size of the entire population of the aforementioned dataset is 56,332,638 (as of 16:34 EST, Monday, Dec. 6, 2021), and this number is constantly increasing with more recent traffic surveillance obervations being uploaded to the server. Thus, the sample being studied in this simulator (and its relevant models) **may not necessarily be representative of the behavioral variations of traffic network patterns within boroughs across time in its entirity**—due to practical considerations and the limited scope of this project—thus **statistical inferences with real-world implications should NOT be drawn from this simulator, as consistently mentioned above**. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05223883",
+   "metadata": {},
+   "source": [
+    "#### 3.2 Variables Used, KNN Models, and Losses in the Degrees of Freedom\n",
+    "For the first step, from the source the <i><a href = \"https://data.cityofnewyork.us/Transportation/Real-Time-Traffic-Speed-Data/qkm5-nuaq\" target = \"_blank\">Real-Time Traffic Speed Data</a></i> dataset, only the variables `SPEED` (renamed as `rou_speed` in the model dataframe), `TRAVEL_TIME` (renamed as `tr_time` in the model dataframe), `DATA_AS_OF` (renamed as `time_s` in the model dataframe), `LINK_POINTS` (transformed from `string` into a Python `LineString` object, under the new column variable label `geometry`), `BOROUGH` (renamed as `boro` in the model dataframe), and `LINK_NAME` (renamed as `names` in the model dataframe) are requested and stored locally in the model (each having been processed as respectively indicated in the parenthesis next to the variable label). These information have been sufficient for the purpose of **descriptive illustrations of traffic network patterns (travel time, travel speed, and metadata) on the borough level**.\n",
+    "\n",
+    "Nonetheless, all the other functions (\"Construction\", \"New Road\", \"New Multi-Road\") of this simulator inherently involve predictive modeling. The model approach of **KNN (K-Nearest Neighbors)**, provided by the `scikit-learn` Python library, has been chosen...\n",
+    "\n",
+    "KNN models used - Euclidean distance - \"behaving most akin to these existing records of these streets\". Behaving more consistent and reliable than RF or logistic regressions (common alternative machine learning models).\n",
+    "\n",
+    "Optimal hyperparamter - based on historical average (again, finding it every time would be computationally costly)\n",
+    "\n",
+    "loss of up to 3 degrees of freedom; not very strong explanatory powers (w.r.t explained variations)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26f19a52",
+   "metadata": {},
+   "source": [
+    "#### 3.3 Lack of Data and Additional Confounding Variables (Agent-Based Microsimulation Models)\n",
+    "Omitted Variable Bias (could explain the not so strong R^2)\n",
+    "demand side of the NYC population - lack of data, skillset, or relevant adapted libraries\n",
+    "\n",
+    "MTA - public transit\n",
+    "\n",
+    "Pedestrian circulation\n",
+    "\n",
+    "Cellular deviced traffic data. Infering from speed: walk/drive; discard pedestrians (walking). The full spectrum of circulations (mobility), "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11052467",
+   "metadata": {},
+   "source": [
+    "#### 3.4 Ethical Considerations: Scaling of Population Estimations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c0db1c5",
+   "metadata": {},
+   "source": [
+    "#### 3.5 Directions for Future Research"
    ]
   },
   {
