--- a/Project Notice of Objectives and Limitations.ipynb
+++ b/Project Notice of Objectives and Limitations.ipynb
@@ -35,20 +35,25 @@
    "metadata": {},
    "source": [
     "<h3 align = \"center\">OUTLINE</h3>\n",
-    "<h3>1. Project Disclaimer and Purpose</h3>\n",
-    "<h4>1.1 Project Disclaimer (\"Disclaimer\")</h4>\n",
-    "<h4>1.2 Project Purpose & Objectives (\"Manifesto\")</h4>\n",
-    "<h4>1.3 Project Simulator Specifications (\"Instructions\")</h4>\n",
-    "<h3>2. Project Data Sources and References</h3>\n",
-    "<h4>2.1 Citation of Critical Data Sources, Programming Libraries/Packages, and Services</h4>\n",
-    "<h4>2.2 Citation of All Used Python Programming Libraries</h4>\n",
-    "<h3>3. Project Methodology, Limitations, and Directions for Future Research</h3>\n",
-    "<h4>3.1 Limited Sample Size</h4>\n",
-    "<h4>3.2 Variables Used, KNN Models, and Losses in the Degrees of Freedom</h4>\n",
-    "<h4>3.3 Lack of Data and Additional Confounding Variables (Agent-Based Microsimulation Models)</h4>\n",
-    "<h4>3.4 Ethical Considerations: Scaling of Population Estimations</h4>\n",
-    "<h4>3.5 Directions for Future Research</h4>\n",
-    "<h3>4. Contact Information</h3>"
+    "<h4>1. Project Disclaimer and Purpose</h4>\n",
+    "<h5>1.1 Project Disclaimer (\"Disclaimer\")</h5>\n",
+    "<h5>1.2 Project Purpose & Objectives (\"Manifesto\")</h5>\n",
+    "<h5>1.3 Project Simulator Specifications (\"Instructions\")</h5>\n",
+    "<h4>2. Project Data Sources and References</h4>\n",
+    "<h5>2.1 Citation of Critical Data Sources, Programming Libraries/Packages, and Services</h5>\n",
+    "<h5>2.2 Citation of All Used Python Programming Libraries</h5>\n",
+    "<h4>3. Project Methodology, Limitations, and Directions for Future Research</h4>\n",
+    "<h5>3.1 Limited Sample Size</h5>\n",
+    "<h5>3.2 Variables Used, KNN Models, and Losses in the Degrees of Freedom</h5>\n",
+    "\n",
+    "3.2.1 Descriptive Illustrations of Traffic Data<br>\n",
+    "3.2.2 Aesthetic Considerations (Map Color Scheme)<br>\n",
+    "3.2.3 Predictive Models (KNN Approach)<br>\n",
+    "3.2.4 Losses in the Degrees of Freedom\n",
+    "\n",
+    "<h5>3.4 Ethical Considerations: Scaling of Population Estimations</h5>\n",
+    "<h5>3.5 Directions for Future Research</h5>\n",
+    "<h4>4. Contact Information</h4>"
    ]
   },
   {
@@ -231,7 +236,7 @@
    "metadata": {},
    "source": [
     "#### 3.1 Limited Sample Size\n",
-    "In the published **demonstration (\"demo\") of the end product**, a **most recent sample of 1,000 data points is requested from the server of the <i><a href = \"https://data.cityofnewyork.us/Transportation/Real-Time-Traffic-Speed-Data/qkm5-nuaq\" target = \"_blank\">Real-Time Traffic Speed Data</a></i> dataset**. This is largely due to considerations of compatibility of the computing power of different devices and operating systems—**1,000 data points would still be statistically large enough** (for theorems such as the *Law of Large Numbers* or *Central Limit Theorem* to hold—which validates the unbiasedness and consistency of the inferences of the models), while **not so large that the server queries place significant burdens on the devices of end-users** (or the queries may simply take too much time and negatively impact user experiences). \n",
+    "In the published **demonstration (\"demo\") of the end product**, a **most recent sample of 1,000 data points is requested from the server of the <i><a href = \"https://data.cityofnewyork.us/Transportation/Real-Time-Traffic-Speed-Data/qkm5-nuaq\" target = \"_blank\">Real-Time Traffic Speed Data</a></i> dataset**. This is largely due to considerations of compatibility of the computing power of different devices and operating systems—**1,000 data points would still be statistically large enough** (for theorems such as the *Law of Large Numbers* or *Central Limit Theorem* to hold—which are essential for key model assumptions such as an identifiable asymptotically normal distribution of model estimators/statistics), while **not so large that the server queries place significant burdens on the devices of end-users** (or the queries may simply take too much time and negatively impact user experiences). \n",
     "\n",
     "Nonetheless, the size of the entire population of the aforementioned dataset is 56,332,638 (as of 16:34 EST, Monday, Dec. 6, 2021), and this number is constantly increasing with more recent traffic surveillance obervations being uploaded to the server. Thus, the sample being studied in this simulator (and its relevant models) **may not necessarily be representative of the behavioral variations of traffic network patterns within boroughs across time in its entirity**—due to practical considerations and the limited scope of this project—thus **statistical inferences with real-world implications should NOT be drawn from this simulator, as consistently mentioned above**. "
    ]
@@ -241,32 +246,61 @@
    "id": "05223883",
    "metadata": {},
    "source": [
-    "#### 3.2 Variables Used, KNN Models, and Losses in the Degrees of Freedom\n",
+    "#### 3.2 Variables Used, Predictive (KNN) Models, and Losses in the Degrees of Freedom\n",
+    "\n",
+    "##### 3.2.1 Descriptive Illustrations of Traffic Data\n",
     "For the first step, from the source the <i><a href = \"https://data.cityofnewyork.us/Transportation/Real-Time-Traffic-Speed-Data/qkm5-nuaq\" target = \"_blank\">Real-Time Traffic Speed Data</a></i> dataset, only the variables `SPEED` (renamed as `rou_speed` in the model dataframe), `TRAVEL_TIME` (renamed as `tr_time` in the model dataframe), `DATA_AS_OF` (renamed as `time_s` in the model dataframe), `LINK_POINTS` (transformed from `string` into a Python `LineString` object, under the new column variable label `geometry`), `BOROUGH` (renamed as `boro` in the model dataframe), and `LINK_NAME` (renamed as `names` in the model dataframe) are requested and stored locally in the model (each having been processed as respectively indicated in the parenthesis next to the variable label). These information have been sufficient for the purpose of **descriptive illustrations of traffic network patterns (travel time, travel speed, and metadata) on the borough level**.\n",
     "\n",
-    "Nonetheless, all the other functions (\"Construction\", \"New Road\", \"New Multi-Road\") of this simulator inherently involve predictive modeling. The model approach of **KNN (K-Nearest Neighbors)**, provided by the `scikit-learn` Python library, has been chosen...\n",
+    "##### 3.2.2 Aesthetic Considerations (Map Color Scheme)\n",
+    "For artistic illustration purposes (which is the nature of this simulator and its demonstration), the background of the map on which each road is denoted has been intentionally chosen as **\"black and white\" (following the `Stamen Toner` style of the `Folium` Python library)**—simultaneously reminiscent of comic strips and placing more emphasis on the roads (visible as a **colored geometric trajectory by plotting the respective `LineString` object for each road**), as well as the HTML markers placed at the starting point of each road (where the users can click on them to learn about more metadata-information related to the road).\n",
     "\n",
-    "KNN models used - Euclidean distance - \"behaving most akin to these existing records of these streets\". Behaving more consistent and reliable than RF or logistic regressions (common alternative machine learning models).\n",
+    "The color scheme for the road trajectories are as follows:\n",
+    "- <b style=\"color:#BB1E10;\">Red (hex code: #BB1E10):</b> if the speed at the chosen point in time is **slower than or equal to** the historical average of this road\n",
+    "- <b style=\"color:#33A532;\">Green (hex code: #33A532):</b> if the speed at the chosen point in time is **faster** than the historical average of this road\n",
+    "- <b style=\"color:#F7B500;\">Yellow (hex code: #F7B500):</b> if changes are proposed to the road (see sections below for more details)\n",
     "\n",
-    "Optimal hyperparamter - based on historical average (again, finding it every time would be computationally costly)\n",
+    "This color scheme has been intentionally chosen as it follows the **color scheme of the vehicle traffic light signals of the State of New York**. \n",
     "\n",
-    "loss of up to 3 degrees of freedom; not very strong explanatory powers (w.r.t explained variations)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "26f19a52",
-   "metadata": {},
-   "source": [
-    "#### 3.3 Lack of Data and Additional Confounding Variables (Agent-Based Microsimulation Models)\n",
-    "Omitted Variable Bias (could explain the not so strong R^2)\n",
-    "demand side of the NYC population - lack of data, skillset, or relevant adapted libraries\n",
+    "##### 3.2.3 Predictive Models (KNN Approach)\n",
     "\n",
-    "MTA - public transit\n",
+    "Apart from the purely descriptive illustrations, all the other functions (\"Construction\", \"New Road\", \"New Multi-Road\") of this simulator inherently involve predictive modeling. The model approach of **KNN (K-Nearest Neighbors)**, provided by the `scikit-learn` Python library, has been chosen by the developer—with the **following important considerations**:\n",
+    "- The KNN model uses Euclidean distance to identify the \"nearest neighbors\" (existing data of roads having been used to fit the model with) that would behave **most similarly to the completely new and never-seen-before road (in the case of proposing a new road) and network system (in the case of placing a road under construction)**. This similarity in behavior and properties of roads belonging to a traffic network system clustered on the level of boroughs is thus highly intuitive and essential to the developer's adaptation of KNN models in predictions. \n",
     "\n",
-    "Pedestrian circulation\n",
     "\n",
-    "Cellular deviced traffic data. Infering from speed: walk/drive; discard pedestrians (walking). The full spectrum of circulations (mobility), "
+    "- Based on the developer's own past experiences and experimentations, **the KNN approach behaves more consistently and reliably than other common alternative machine learning models** such as random forests (RF) or logistic regressions. Some important reasons would be that random forests (RF) models, which involve binary decision trees, tend to yield similar if not the same outputs for a range of inputs. And as for logistic regressions, the developer has learned from another machine learning class that programmers cannot find the optimal hyperparameter using conventional train-test split or cross-validation methods. \n",
+    "    - Read further about a comparison of different prediction models and approaches <a href = \"https://github.com/tx542/db_mid/blob/main/bsg9679_sgt2559_tx542_Assignment_3_vFinal.ipynb\" target = \"_blank\">here (a group project in another class of which the developer has been a part of)</a>.\n",
+    "    \n",
+    "    \n",
+    "- The full model of the simulator would find the optimal hyperparameter of the KNN model (the number of \"nearest neighbors\") through a combination of train-test split and cross-validation every time a new set of sample is queries from the dataset server. Nonetheless, this would be extremely **computationally costly and not conducive to interactive user experiences**. Thus, **for the demonstration of the simulator, the optimal hyperparamter (based on historical average) of `7 nearest neighbors` is used for the KNN models**.\n",
+    "\n",
+    "##### 3.2.4 Losses in the Degrees of Freedom\n",
+    "Statistically speaking, up to **three degrees of freedom can be lost** in the predictive models—as the **KNN models are used for more than once using the sample sample from the dataset to gauge population relationships of interest** (depending on the specific user's choice of predictive functions):\n",
+    "\n",
+    "- In the case of **\"Construction\" predictive function, two degrees of freedom** are lost, as:\n",
+    "    - `names_code` (name of the roads in the traffic network, turned into encoded strings to fit into KNN models), `boro_code` (borough of the road turned into encoded strings for the same reason), `time_float` (`time_s` turned into `pandas.timestamp` object to fit into KNN models), and `tr_dist` (the `length` method of the Python `LineString` object for each road) are used to estimate (predict) the `tr_time` (travel time) of each road in the new, modified traffic network (having placed a road under construction);\n",
+    "    - Then, `names_code`, `boro_code`, `time_float`, `tr_dist`, and the estimated (predicted) `tr_time` are used to again estimate (predict) `rou_speed` (travel speed) of each road in the new, modified traffic network, using the same sample dataset. \n",
+    "\n",
+    "    In other words, if we regard the KNN models as functions (as there can be only one output for each bundle of input), and define the first step (KNN model) as $\\text{KNN_1}: \\mathbb{R}^4 \\to \\mathbb{R}$ and the second step  (KNN model) as $\\text{KNN_2}: \\mathbb{R}^5 \\to \\mathbb{R}$, we have:\n",
+    "    \n",
+    "        - $\\hat{\\text{tr_time}} = \\text{KNN_1}(\\text{names_code}, \\text{boro_code}, \\text{time_float}, \\text{tr_dist})$\n",
+    "        - $\\hat{\\text{rou_speed}} = \\text{KNN_2}(\\text{names_code}, \\text{boro_code}, \\text{time_float}, \\text{tr_dist}, \\hat{\\text{tr_time}})$\n",
+    "        \n",
+    "     **Using the same dataset, we have two levels of estimations—hence the loss of two degrees of freedom**.\n",
+    "\n",
+    "\n",
+    "- In the case of **\"New Road\" and \"New Multi-Road\" predictive function, three degrees of freedom** are lost, as:\n",
+    "    - First of all, we need to determine **to which existing roads (\"nearest neighbors\") this newly proposed road is most similar to** (which happens to be the underlying intuition behind the KNN approach): we use `boro_code`, `time_float`, and `tr_dist` to estimate (predict) `names_code`.\n",
+    "    - Then, we follow the same steps as above: \n",
+    "        - Use the estimated (predicted) `names_code`, `boro_code`, `time_float`, and `tr_dist` to estimate (predict) the `tr_time` (travel time) of each road in the new traffic network (with the addition of a newly proposed raod).\n",
+    "        - Use the estimated (predicted) `names_code`, `boro_code`, `time_float`, `tr_dist` and the estimated (predicted) `tr_time` to again estimate (predict) `rou_speed` (travel speed) of each road in the new traffic network, using the same sample dataset. \n",
+    "        \n",
+    "    In other words, if use the same KNN function definitions as scenario 1 above, and also define the \"first of all - gauging the `names_code` of the road\" step as $\\text{KNN_0}: \\mathbb{R}^3 \\to \\mathbb{R}$, we have:\n",
+    "    \n",
+    "        - $\\hat{\\text{names_code}} = \\text{KNN_0}(\\text{boro_code}, \\text{time_float}, \\text{tr_dist})$\n",
+    "        - $\\hat{\\text{tr_time}} = \\text{KNN_1}(\\hat{\\text{names_code}}, \\text{boro_code}, \\text{time_float}, \\text{tr_dist})$\n",
+    "        - $\\hat{\\text{rou_speed}} = \\text{KNN_2}(\\hat{\\text{names_code}}, \\text{boro_code}, \\text{time_float}, \\text{tr_dist}, \\hat{\\text{tr_time}})$ \n",
+    "\n",
+    "    <b>Using the same dataset, we have three levels of estimations—hence the loss of three degrees of freedom</b>."
    ]
   },
   {
@@ -274,7 +308,11 @@
    "id": "11052467",
    "metadata": {},
    "source": [
-    "#### 3.4 Ethical Considerations: Scaling of Population Estimations"
+    "#### 3.3 Ethical Considerations: Scaling of Population Estimations\n",
+    "\n",
+    "Furthermore, for any user-inputted proposal regarding the construction of a new \"Road\" or \"Multi-Road\" (see definition in section 1.3 below), this artistic and illustrative simulator will generate a list of warnings (\"ethical considerations\") regarding the areas and people negatively impacted by this proposal (based on the listed stopping points).\n",
+    "\n",
+    "This feature illustrates the necessity of the incorporation of ethical considerations in actual models adapted for real-life urban planning—in the real world (NOT within the scope of this artistic and illustrative simulator), this feature (incorporation of ethical considerations) would help the end-user may more accurately discern the potential socioeconomic costs of their proposal, which may facilitate their marginal decision analysis/making."
    ]
   },
   {
@@ -282,7 +320,21 @@
    "id": "5c0db1c5",
    "metadata": {},
    "source": [
-    "#### 3.5 Directions for Future Research"
+    "#### 3.4 Directions for Future Research\n",
+    "\n",
+    "Lack of Data and Additional Confounding Variables \n",
+    "Omitted Variable Bias (could explain the not so strong R^2)\n",
+    "\n",
+    "\n",
+    "(Agent-Based Microsimulation Models)\n",
+    "\n",
+    "demand side of the NYC population - lack of data, skillset, or relevant adapted libraries\n",
+    "\n",
+    "MTA - public transit\n",
+    "\n",
+    "Pedestrian circulation\n",
+    "\n",
+    "Cellular deviced traffic data. Infering from speed: walk/drive; discard pedestrians (walking). The full spectrum of circulations (mobility), "
    ]
   },
   {
