--- a/Project Notice of Objectives and Limitations.ipynb
+++ b/Project Notice of Objectives and Limitations.ipynb
@@ -51,8 +51,8 @@
     "3.2.3 Predictive Models (KNN Approach)<br>\n",
     "3.2.4 Losses in the Degrees of Freedom\n",
     "\n",
-    "<h5>3.4 Ethical Considerations: Scaling of Population Estimations</h5>\n",
-    "<h5>3.5 Directions for Future Research</h5>\n",
+    "<h5>3.3 Ethical Considerations in User Proposals</h5>\n",
+    "<h5>3.4 Directions for Future Research</h5>\n",
     "<h4>4. Contact Information</h4>"
    ]
   },
@@ -86,7 +86,7 @@
     "\n",
     "**Furthermore, for any user-inputted proposal regarding the construction of a new \"Road\" or \"Multi-Road\" (see definition in section 1.3 below), this artistic and illustrative simulator will generate a list of warnings (\"ethical considerations\") regarding the areas and people negatively impacted by this proposal (based on the listed stopping points).**\n",
     "\n",
-    "**This feature illustrates the necessity of the incorporation of ethical considerations in actual models adapted for real-life urban planning—in the real world (NOT within the scope of this artistic and illustrative simulator), this feature (incorporation of ethical considerations) would help the end-user may more accurately discern the potential socioeconomic costs of their proposal, which may facilitate their marginal decision analysis/making.**"
+    "**Indeed, this feature illustrates the necessity of the incorporation of ethical considerations in actual models adapted for real-life urban planning in the real world (NOT within the scope of this artistic and illustrative simulator). Such an incorporation of ethical considerations would help the end-users more accurately discern the potential socioeconomic costs of their proposal, which may facilitate their marginal decision analysis/making.**"
    ]
   },
   {
@@ -280,10 +280,10 @@
     "    - `names_code` (name of the roads in the traffic network, turned into encoded strings to fit into KNN models), `boro_code` (borough of the road turned into encoded strings for the same reason), `time_float` (`time_s` turned into `pandas.timestamp` object to fit into KNN models), and `tr_dist` (the `length` method of the Python `LineString` object for each road) are used to estimate (predict) the `tr_time` (travel time) of each road in the new, modified traffic network (having placed a road under construction);\n",
     "    - Then, `names_code`, `boro_code`, `time_float`, `tr_dist`, and the estimated (predicted) `tr_time` are used to again estimate (predict) `rou_speed` (travel speed) of each road in the new, modified traffic network, using the same sample dataset. \n",
     "\n",
-    "    In other words, if we regard the KNN models as functions (as there can be only one output for each bundle of input), and define the first step (KNN model) as $\\text{KNN_1}: \\mathbb{R}^4 \\to \\mathbb{R}$ and the second step  (KNN model) as $\\text{KNN_2}: \\mathbb{R}^5 \\to \\mathbb{R}$, we have:\n",
+    "    In other words, if we regard the KNN models as functions (as there can be only one output for each bundle of input), and define the first step (KNN model) as $\\text{KNN}_1: \\mathbb{R}^4 \\to \\mathbb{R}$ and the second step  (KNN model) as $\\text{KNN}_2: \\mathbb{R}^5 \\to \\mathbb{R}$, we have:\n",
     "    \n",
-    "        - $\\hat{\\text{tr_time}} = \\text{KNN_1}(\\text{names_code}, \\text{boro_code}, \\text{time_float}, \\text{tr_dist})$\n",
-    "        - $\\hat{\\text{rou_speed}} = \\text{KNN_2}(\\text{names_code}, \\text{boro_code}, \\text{time_float}, \\text{tr_dist}, \\hat{\\text{tr_time}})$\n",
+    "        - $\\hat{\\text{tr_time}} = \\text{KNN}_1(\\text{names_code}, \\text{boro_code}, \\text{time_float}, \\text{tr_dist})$\n",
+    "        - $\\hat{\\text{rou_speed}} = \\text{KNN}_2(\\text{names_code}, \\text{boro_code}, \\text{time_float}, \\text{tr_dist}, \\hat{\\text{tr_time}})$\n",
     "        \n",
     "     **Using the same dataset, we have two levels of estimations—hence the loss of two degrees of freedom**.\n",
     "\n",
@@ -294,13 +294,15 @@
     "        - Use the estimated (predicted) `names_code`, `boro_code`, `time_float`, and `tr_dist` to estimate (predict) the `tr_time` (travel time) of each road in the new traffic network (with the addition of a newly proposed raod).\n",
     "        - Use the estimated (predicted) `names_code`, `boro_code`, `time_float`, `tr_dist` and the estimated (predicted) `tr_time` to again estimate (predict) `rou_speed` (travel speed) of each road in the new traffic network, using the same sample dataset. \n",
     "        \n",
-    "    In other words, if use the same KNN function definitions as scenario 1 above, and also define the \"first of all - gauging the `names_code` of the road\" step as $\\text{KNN_0}: \\mathbb{R}^3 \\to \\mathbb{R}$, we have:\n",
+    "    In other words, if use the same KNN function definitions as scenario 1 above, and also define the \"first of all - gauging the `names_code` of the road\" step as $\\text{KNN}_0: \\mathbb{R}^3 \\to \\mathbb{R}$, we have:\n",
     "    \n",
-    "        - $\\hat{\\text{names_code}} = \\text{KNN_0}(\\text{boro_code}, \\text{time_float}, \\text{tr_dist})$\n",
-    "        - $\\hat{\\text{tr_time}} = \\text{KNN_1}(\\hat{\\text{names_code}}, \\text{boro_code}, \\text{time_float}, \\text{tr_dist})$\n",
-    "        - $\\hat{\\text{rou_speed}} = \\text{KNN_2}(\\hat{\\text{names_code}}, \\text{boro_code}, \\text{time_float}, \\text{tr_dist}, \\hat{\\text{tr_time}})$ \n",
+    "        - $\\hat{\\text{names_code}} = \\text{KNN}_0(\\text{boro_code}, \\text{time_float}, \\text{tr_dist})$\n",
+    "        - $\\hat{\\text{tr_time}} = \\text{KNN}_1(\\hat{\\text{names_code}}, \\text{boro_code}, \\text{time_float}, \\text{tr_dist})$\n",
+    "        - $\\hat{\\text{rou_speed}} = \\text{KNN}_2(\\hat{\\text{names_code}}, \\text{boro_code}, \\text{time_float}, \\text{tr_dist}, \\hat{\\text{tr_time}})$ \n",
     "\n",
-    "    <b>Using the same dataset, we have three levels of estimations—hence the loss of three degrees of freedom</b>."
+    "    <b>Using the same dataset, we have three levels of estimations—hence the loss of three degrees of freedom</b>.\n",
+    "    \n",
+    "Please refer to this document (Jupyter Notebook) for a more comprehensive analysis on the predictive machine learning models that the developer has experimented for this project (LINK TO BE ADDED SOON)."
    ]
   },
   {
@@ -308,11 +310,27 @@
    "id": "11052467",
    "metadata": {},
    "source": [
-    "#### 3.3 Ethical Considerations: Scaling of Population Estimations\n",
+    "#### 3.3 Ethical Considerations in User Proposals\n",
     "\n",
-    "Furthermore, for any user-inputted proposal regarding the construction of a new \"Road\" or \"Multi-Road\" (see definition in section 1.3 below), this artistic and illustrative simulator will generate a list of warnings (\"ethical considerations\") regarding the areas and people negatively impacted by this proposal (based on the listed stopping points).\n",
+    "In considerations of ethical implications associated with urban (traffic) planning proposals, for **any user-inputted proposal regarding the construction of a new \"Road\" or \"Multi-Road\"** (see definition/instruction in section 1.3 above), the simulator will generate a **list of warnings (\"ethical considerations\") regarding the areas and people negatively impacted by this proposal (based on the listed stopping points)**.\n",
     "\n",
-    "This feature illustrates the necessity of the incorporation of ethical considerations in actual models adapted for real-life urban planning—in the real world (NOT within the scope of this artistic and illustrative simulator), this feature (incorporation of ethical considerations) would help the end-user may more accurately discern the potential socioeconomic costs of their proposal, which may facilitate their marginal decision analysis/making."
+    "Indeed, this feature illustrates the **necessity of the incorporation of ethical considerations in actual models adapted for real-life urban planning** in the real world (NOT within the scope of this artistic and illustrative simulator). Such an incorporation of ethical considerations would help the end-users **more accurately discern the potential socioeconomic costs of their proposal, which may facilitate their marginal decision analysis/making**.\n",
+    "\n",
+    "The information and data pertaining to these ethical considerations have been obtained through the **OpenStreetMap (OSM) - Nominatim © API and the Population Estimation Service (PES) web-based service** (cited in section 2.1 above). \n",
+    "\n",
+    "The OpenStreetMap (OSM) - Nominatim © API provides **metadata regarding a certain OSM address object that can be identified through user-inputted address (string format)**. The following information have been incorporated into the ethical analyses of this project (simulator and demonstration):\n",
+    "1. Full address name\n",
+    "2. Latitude and longitude\n",
+    "3. OSM class\n",
+    "4. OSM type\n",
+    "5. OSM importance index\n",
+    "<br><a href = \"https://nominatim.org/release-docs/develop/api/Output/#json\" target = \"_blank\">Learn more about Nominatim © API place search output formats and information here</a>\n",
+    "\n",
+    "With regards to the **Population Estimation Service (PES) web-based service**, the minimum area (for which an estimate can be obtained through the service) is the equivalent of **a circle with a radius of 5km ($25\\pi \\approx 78.5398\\text{ km}^2$)**. If the user proposed a new road construction plan that involves **an area less than the aforementioned minumum, an estimate is obtained through secondary calculation by scaling down the minimum area using ratio of areas (i.e. user-proposal:minumum-area)**.\n",
+    "\n",
+    "The following datasets have been used for ethical analyses of this project (follow <a href = \"https://docs.google.com/spreadsheets/d/1W9Zg2kHF0xEJ-1cS_IZLOgFIHAFf-CFG079ScrE05RA/edit#gid=0\" target = \"_blank\">this link</a> for a list of the available datasets provided by the PES):\n",
+    "1. Population Count, v4.10 (2000, 2005, 2010, 2015, 2020) - `gpw-v4-population-count-rev10_2020`\n",
+    "2. UN WPP-Adjusted Population Count, v4.10 (2000, 2005, 2010, 2015, 2020) - `gpw-v4-land-water-area-rev10_landareakm`"
    ]
   },
   {
@@ -322,19 +340,11 @@
    "source": [
     "#### 3.4 Directions for Future Research\n",
     "\n",
-    "Lack of Data and Additional Confounding Variables \n",
-    "Omitted Variable Bias (could explain the not so strong R^2)\n",
+    "As demonstrated in the linked Jupyter Notebook document (follow this link - TO BE ADDED) in section 3.2.4 above, even the optimal models for some of the intermediary steps in estimating (predicting) traits of roads in a newly defined traffic network under user specifications may not necessarily be **very strongly explanatory of the variations in the sample dataset with high cross-validation of train-test split scores (which are some variations of $R^2$, which evaluates the goodness-of-fit of models**. Indeed, this suggests the existence of **additional omitted or counfounding (lurking) variables not included in the models** throughout this project. \n",
     "\n",
+    "Therefore, one promising direction for future research and projects in similar fields would be the adaptation of **agent-based microsimulation models**, which can account for the demand side of traffic usage (arising from the NYC citizen/resident population), which would certainly be associated with network patterns on the borough level. The adaptation of agent-based microsimulation models has not been possible for the scope of this project—due to the lack of appropriate datasets, the developer's relevant skillsets, and relevant, ready-to-use libraries implemented in the Python programming language. \n",
     "\n",
-    "(Agent-Based Microsimulation Models)\n",
-    "\n",
-    "demand side of the NYC population - lack of data, skillset, or relevant adapted libraries\n",
-    "\n",
-    "MTA - public transit\n",
-    "\n",
-    "Pedestrian circulation\n",
-    "\n",
-    "Cellular deviced traffic data. Infering from speed: walk/drive; discard pedestrians (walking). The full spectrum of circulations (mobility), "
+    "Additionally, one could also explore the **heterogeneity in the exact mode of transportation—ranging from pedestrians (walking) or biking to taking public transit (with buses or MTA)**. A study of this more comprehensive spectrum of circulations (mobility) could shed further light on the factors contributing to individuals' choices of a (preferred) mode of transportation, as well as the likely different types of relationships and predictive models across different means of circulations (physical mobility). "
    ]
   },
   {
